# chirandhAi

./: .dockerignore  .env.example  .gitignore  Dockerfile.api  Dockerfile.web  Dockerfile.worker  README.md  docker-compose.yml  pyproject.toml  railway.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  main.py  worker_tasks.py
app/api/: deps.py  schemas.py
app/api/routers/: artifacts.py  health.py  jobs.py  sessions.py
app/core/: config.py  logging_config.py  metrics.py  ratelimit.py
app/db/: __init__.py  models.py  session.py
app/services/: compile_runner.py  edit_validation.py  job_queue.py  latex_render.py  llm_service.py  storage.py
deploy/: nginx-web.conf
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
scripts/: export_openapi.py
templates/: resume.tex.j2
tests/: conftest.py  test_api_flow.py  test_compile_smoke.py  test_validation.py
