[project]
name = "chirandhai-resume-api"
version = "0.1.0"
description = "ATS resume refinement API with LaTeX/Tectonic PDF pipeline"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "aiosqlite>=0.20.0",
    "slowapi>=0.1.9",
    "redis>=5.2.0",
    "arq>=0.26.0",
    "boto3>=1.35.0",
    "openai>=1.57.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.17",
    "prometheus-client>=0.21.0",
    "python-json-logger>=2.0.7",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
